@@ -21,12 +21,17 @@ MAINTAINERCLEANFILES = include/slc_m4sugar.m4 include/slc_m4sversion.m4 include/
 
 if MAINTAINER_MODE
 include/slc_m4sugar.m4: $(srcdir)/include/m4sugar.m4 $(srcdir)/include/m4sugar_transform.sed
+	$(MKDIR_P) include
 	$(SED) -f $(srcdir)/include/m4sugar_transform.sed $< >$@.tmp
 	mv $@.tmp $@
+
 include/slc_m4sversion.m4: $(srcdir)/include/m4sugar_version.m4 $(srcdir)/include/m4sugar_transform.sed
+	$(MKDIR_P) include
 	$(SED) -f $(srcdir)/include/m4sugar_transform.sed $< >$@.tmp
 	mv $@.tmp $@
+
 include/slc_m4sforeach.m4: $(srcdir)/include/m4sugar_foreach.m4 $(srcdir)/include/m4sugar_transform.sed
+	$(MKDIR_P) include
 	$(SED) -f $(srcdir)/include/m4sugar_transform.sed $< >$@.tmp
 	mv $@.tmp $@
 endif
